# MRecord

./: 思路.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/mrecord/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: UserArguments.h
app/src/main/java/com/example/administrator/mrecord/: AppContext.java  AppManager.java  AudioNativeUtils.java  CameraView.java  LiveEngine.java  MainActivity.java  ThreadPoolFactory.java  UiUtils.java
app/src/main/java/com/example/administrator/mrecord/push/: AudioPusher.java  Pusher.java  VideoPusher.java
app/src/main/java/com/example/administrator/mrecord/push/params/: AudioParams.java  Params.java  VideoParams.java
app/src/main/java/com/example/administrator/mrecord/utils/: AcousticEchoCancelerUtils.java  AudioNativeUtils.java  HandlerUtils.java  PicutureNativeUtils.java  ScreenUtils.java  SizeUtils.java  UiUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/mrecord/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
